# NKRWZMWO_project

./: CMakeLists.txt  Makefile.win  graph.txt  math.dev  math.layout
inc/: dfs.h  file_read.h
src/: dfs.c  file_read.c  main.c
